# learn-bt-on-win

./: README.md
bt-is-connectable/: CMakeLists.txt  README.md
bt-is-connectable/src/: app.c
find-device/: CMakeLists.txt  README.md
find-device/src/: app.c
get-device-info/: CMakeLists.txt  README.md
get-device-info/src/: app.c
n-radio/: CMakeLists.txt  README.md
n-radio/src/: app.c
